fixed the cut off card by removed overflow:hiden on container class, and change opacity to 0 on all animated elements so now they fade in from the opacity 0. fix the bug with the gap above cards with position relative and move top to negative value.

--- a/app/sass/_main.scss
+++ b/app/sass/_main.scss
@@ -45,7 +45,6 @@ section {
 .container {
   max-width: 1110px;
   margin: 0 auto;
-  overflow: hidden;
 }
 
 .flex {
@@ -112,6 +111,7 @@ section {
     padding: 20px 30px;
     margin: 0.5rem 0;
     width: 450px;
+    opacity: 0;
     text-align: center;
     transform: translateX(550px);
     margin-right: calc(50px * var(--i));
@@ -169,16 +169,17 @@ section {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  flex-wrap: wrap;
   width: 100%;
   height: 258px;
   margin-top: 60px;
+
   @media screen and(max-width: 1100px) {
-    margin: 0;
+    margin-top: 0;
+    padding-bottom: 100px;
     flex-direction: column;
     justify-content: flex-start;
     align-items: center;
-    height: 800px;
+    height: auto;
   }
 }
 
@@ -189,6 +190,7 @@ section {
   height: 210px;
   border-radius: 10px;
   color: $White;
+  opacity: 0;
   transform: translateY(300px);
   animation: 0.3s linear forwards fadeInBottom;
 
@@ -252,8 +254,8 @@ section {
   }
 
   @media screen and(max-width: 1100px) {
-    height: auto;
-    opacity: 0;
+    position: relative;
+    top: -240px;
     margin: 0;
     animation: 0.3s linear forwards fadeIn;
   }
